--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -37,6 +37,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    transform: rotateY(0deg);
     backface-visibility: hidden;
 }
 
